feat(webapp): add parameter help icons
