# webapp/openapi.yaml
@@ -18,120 +18,13 @@ paths:
                 file:
                   type: string
                   format: binary
-      parameters:
-        - name: includeImages
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: enableYoloV8
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: enableDetr
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: strategy
-          in: query
-          schema:
-            type: string
-          required: false
-        - name: yoloConfidenceThreshold
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: yoloNmsIoU
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: detrConfidenceThreshold
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: fallbackFp
-          in: query
-          schema:
-            type: integer
-          required: false
-        - name: fallbackFn
-          in: query
-          schema:
-            type: integer
-          required: false
-        - name: eceDetr
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: eceYolo
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: ensembleThreshold
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: enableShapeRoiV2
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: shapeMinAspect
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: shapeMaxAspect
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: lowConfidence
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: highConfidence
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: cropMarginPerc
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: roiConfirmIoU
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: uncertainQuantile
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
+                includeImages:
+                  type: boolean
+                config:
+                  type: string
+            encoding:
+              config:
+                contentType: application/json
       responses:
         '200':
           description: Success
@@ -155,138 +48,22 @@ paths:
                 candidate:
                   type: string
                   format: binary
-      parameters:
-        - name: detection
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: temperature
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: threshold
-          in: query
-          schema:
-            type: number
-            format: float
-            default: 0.001
-          required: false
-        - name: preprocessed
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: enableYoloV8
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: enableDetr
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: strategy
-          in: query
-          schema:
-            type: string
-          required: false
-        - name: yoloConfidenceThreshold
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: yoloNmsIoU
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: detrConfidenceThreshold
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: fallbackFp
-          in: query
-          schema:
-            type: integer
-          required: false
-        - name: fallbackFn
-          in: query
-          schema:
-            type: integer
-          required: false
-        - name: eceDetr
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: eceYolo
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: ensembleThreshold
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: enableShapeRoiV2
-          in: query
-          schema:
-            type: boolean
-          required: false
-        - name: shapeMinAspect
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: shapeMaxAspect
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: lowConfidence
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: highConfidence
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: cropMarginPerc
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: roiConfirmIoU
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
-        - name: uncertainQuantile
-          in: query
-          schema:
-            type: number
-            format: float
-          required: false
+                detection:
+                  type: boolean
+                temperature:
+                  type: number
+                  format: float
+                threshold:
+                  type: number
+                  format: float
+                  default: 0.001
+                preprocessed:
+                  type: boolean
+                config:
+                  type: string
+            encoding:
+              config:
+                contentType: application/json
       responses:
         '200':
           description: Success
